--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@mui/icons-material": "^7.1.0",
     "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.1.5",
-    "@tanstack/react-query": "^5.75.5",
+    "@tanstack/react-query": "^5.75.7",
+    "@tanstack/react-query-devtools": "^5.75.7",
+    "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.0",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@cypress/react": "^9.0.1",
