--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "i18next": "^25.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
+    "react-i18next": "^15.5.1",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.0",
     "zod": "^3.24.4",
