--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,37 +11,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
+        with: { node-version: "18" }
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "18"
-
-      - name: Cache npm
-        uses: actions/cache@v3
+      - uses: actions/cache@v3
         with:
           path: |
             ~/.npm
             node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Lint
-        run: npm run lint
-
-      - name: Test
-        run: npm test -- --coverage
-
-      - name: Build
-        run: npm run build
-
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: build
-          path: build
+      - run: npm ci
+      - run: npm run lint
+      - run: npm test -- --coverage
+      - run: npm run build
+      - run: npx vercel build --prod
 
   deploy:
     needs: ci
@@ -50,12 +34,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Download build artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: build
-          path: build
-
       - name: Build & push Docker
         env:
           DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -63,16 +41,13 @@ jobs:
         run: |
           docker login -u "$DOCKERHUB_USER" -p "$DOCKERHUB_TOKEN"
           docker build -t "$DOCKERHUB_USER/my-app:${{ github.sha }}" .
-          docker push  "$DOCKERHUB_USER/my-app:${{ github.sha }}"
-          docker tag   "$DOCKERHUB_USER/my-app:${{ github.sha }}" \
-                        "$DOCKERHUB_USER/my-app:latest"
-          docker push  "$DOCKERHUB_USER/my-app:latest"
+          docker push "$DOCKERHUB_USER/my-app:${{ github.sha }}"
+          docker tag  "$DOCKERHUB_USER/my-app:${{ github.sha }}" "$DOCKERHUB_USER/my-app:latest"
+          docker push "$DOCKERHUB_USER/my-app:latest"
 
-      - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v20
+      - uses: amondnet/vercel-action@v20
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          working-directory: ./
-          vercel-args: "--prod"
+          vercel-args: "--prod --prebuilt"
