--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,6 @@ jobs:
       - run: npm run lint
       # - run: npm test -- --coverage
       - run: npm run build
-      - run: npx vercel build --prod
 
   deploy:
     needs: ci
@@ -50,4 +49,4 @@ jobs:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-args: "--prod --prebuilt"
+          vercel-args: "--prod"
