--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "routes": [{ "src": "/(.*)", "dest": "/" }],
+  "routes": [{ "handle": "filesystem" }, { "src": "/.*", "dest": "/" }],
   "github": {
     "enable": false
   }
