--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,9 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     env:
-      VITE_GOOGLE_MAPS_API_KEY:       ${{ secrets.VITE_GOOGLE_MAPS_API_KEY }}
-      VITE_API_CLIENT_KEY:            ${{ secrets.VITE_API_CLIENT_KEY }}
-      VITE_BASE_URL_API_CLIENT:       ${{ secrets.VITE_BASE_URL_API_CLIENT }}
+      VITE_GOOGLE_MAPS_API_KEY: ${{ secrets.VITE_GOOGLE_MAPS_API_KEY }}
+      VITE_API_CLIENT_KEY: ${{ secrets.VITE_API_CLIENT_KEY }}
+      VITE_BASE_URL_API_CLIENT: ${{ secrets.VITE_BASE_URL_API_CLIENT }}
       VITE_GOOGLE_MAPS_COORDINATES_URL: ${{ secrets.VITE_GOOGLE_MAPS_COORDINATES_URL }}
     steps:
       - uses: actions/checkout@v4
@@ -31,6 +31,12 @@ jobs:
       # - run: npm test -- --coverage
       - run: npm run build
 
+      - name: Upload dist artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: dist
+
   deploy:
     needs: ci
     if: github.ref == 'refs/heads/main'
@@ -38,18 +44,27 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Build & push Docker
-        env:
-          DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-        run: |
-          docker login -u "$DOCKERHUB_USER" -p "$DOCKERHUB_TOKEN"
-          docker build -t "$DOCKERHUB_USER/my-app:${{ github.sha }}" .
-          docker push "$DOCKERHUB_USER/my-app:${{ github.sha }}"
-          docker tag  "$DOCKERHUB_USER/my-app:${{ github.sha }}" "$DOCKERHUB_USER/my-app:latest"
-          docker push "$DOCKERHUB_USER/my-app:latest"
+      - name: Download dist artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: dist
 
-      - uses: amondnet/vercel-action@v20
+      - uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build & push Docker
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/my-app:${{ github.sha }} .
+          docker push  ${{ secrets.DOCKERHUB_USERNAME }}/my-app:${{ github.sha }}
+          docker tag   ${{ secrets.DOCKERHUB_USERNAME }}/my-app:${{ github.sha }} \
+                       ${{ secrets.DOCKERHUB_USERNAME }}/my-app:latest
+          docker push  ${{ secrets.DOCKERHUB_USERNAME }}/my-app:latest
+
+      - name: Deploy to Vercel
+        uses: amondnet/vercel-action@v20
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
