--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,12 +31,6 @@ jobs:
       # - run: npm test -- --coverage
       - run: npm run build
 
-      - name: Upload dist artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist
-          path: dist
-
   deploy:
     needs: ci
     if: github.ref == 'refs/heads/main'
@@ -44,27 +38,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Download dist artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: dist
-          path: dist
-
-      - uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Build & push Docker
+        env:
+          DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/my-app:${{ github.sha }} .
-          docker push  ${{ secrets.DOCKERHUB_USERNAME }}/my-app:${{ github.sha }}
-          docker tag   ${{ secrets.DOCKERHUB_USERNAME }}/my-app:${{ github.sha }} \
-                       ${{ secrets.DOCKERHUB_USERNAME }}/my-app:latest
-          docker push  ${{ secrets.DOCKERHUB_USERNAME }}/my-app:latest
+          docker login -u "$DOCKERHUB_USER" -p "$DOCKERHUB_TOKEN"
+          docker build -t "$DOCKERHUB_USER/my-app:${{ github.sha }}" .
+          docker push "$DOCKERHUB_USER/my-app:${{ github.sha }}"
+          docker tag  "$DOCKERHUB_USER/my-app:${{ github.sha }}" "$DOCKERHUB_USER/my-app:latest"
+          docker push "$DOCKERHUB_USER/my-app:latest"
 
-      - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v20
+      - uses: amondnet/vercel-action@v20
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
