--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite --host 0.0.0.0",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
     "preview": "vite preview",
     "prepare": "husky"
   },
@@ -19,6 +21,8 @@
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.75.7",
     "@tanstack/react-query-devtools": "^5.75.7",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/testing-library__user-event": "^4.1.1",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "control361": "file:",
@@ -48,6 +52,7 @@
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "cypress": "^14.3.3",
+    "esbuild": "^0.25.4",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.3",
     "eslint-plugin-prettier": "^5.4.0",
@@ -57,11 +62,14 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.1.5",
     "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
