--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -21,5 +21,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["vite.config.ts", "cypress.config.ts", "cypress/**/*.ts"]
+  "include": ["vite.config.ts", "cypress.config.ts", "cypress/**/*.ts", "cypress/e2e/button.cy.tsx", "jest.config.ts", "jest.setup.ts"]
 }
